# ncbi-taxonomy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  species.py
examples/: build_ncbi_taxonomy.py
ncbi_taxonomy/: __init__.py  dataset.py
ncbi_taxonomy/exceptions/: __init__.py  unavailable_entry.py  version_exception.py
ncbi_taxonomy/settings/: __init__.py  dataset_settings.py
ncbi_taxonomy/settings/versions/: 2021-06-10.json  2021-12-14.json  2022-02-21.json  2022-06-28.json  2022-08-18.json  2022-10-05.json  2022-12-21.json  2023-02-24.json  2023-06-16.json  2023-06-20.json  2023-09-14.json  2023-09-19.json  2023-12-12.json  2024-02-28.json  2024-03-26.json  2024-05-08.json  2024-07-03.json
ncbi_taxonomy/utils/: __init__.py
