[project]
name = "ncbi-taxonomy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cache-decorator>=2.2.0",
    "compress-json>=1.1.0",
    "downloaders>=1.0.20",
    "ipython>=8.28.0",
    "networkx>=3.4.1",
    "pandas>=2.2.3",
    "polars>=1.9.0",
    "requests>=2.32.3",
    "setuptools>=75.1.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-readme", "validate_version_code"]
