[project]
name = "ncbi-taxonomy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cache-decorator>=2.2.0",
    "compress-json>=1.1.0",
    "downloaders>=1.0.20",
    "pandas>=2.2.3",
    "pip>=24.2",
    "requests>=2.32.3",
    "setuptools>=75.1.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-readme", "validate_version_code"]
